mylang/tests/fail/f2.pas
program

function less(var i, j: int): bool
begin
    less := i < j
end;

begin
    writeln(less())
end@

